# dozencode

./: .gitignore  CNAME  README.md  pyproject.toml  tox.ini
js/: dozencode.js  test.html
python/src/dozencode/: dozencode.py  hozencode.py
src/dozencode/: dozencode.py
test/: test_dozencode.py
